test/sema/typeck/lambda/capture-ref.dora
fn f(r: ref Int32) {
    || { r; };
}
